--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+# Generic backup files
+*~
+\#*
+.\#*
+
+# KiCad backup files
+*.bak
+*.bck
+*.kicad_pcb-bak
 *-backups
 *.zip
+
+# KiCad generated files
+*.erc
+*.net
+*-cache.lib
+*-rescue.lib
 *.lck
